@@ -989,6 +989,104 @@ vbi_dvb_pes_demux_new		(vbi_dvb_demux_cb *	callback,
 
 
 /* dvb_mux.h */
+
+
+extern vbi_bool
+vbi_dvb_multiplex_sliced	(uint8_t **		packet,
+				 unsigned int *		packet_left,
+				 const vbi_sliced **	sliced,
+				 unsigned int *		sliced_left,
+				 vbi_service_set	service_mask,
+				 unsigned int		data_identifier,
+				 vbi_bool		stuffing)
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
+  __attribute__ ((_vbi_nonnull (1, 2, 3, 4)))
+#endif
+  ;
+extern vbi_bool
+vbi_dvb_multiplex_raw		(uint8_t **		packet,
+				 unsigned int *		packet_left,
+				 const uint8_t **	raw,
+				 unsigned int *		raw_left,
+				 unsigned int		data_identifier,
+				 vbi_videostd_set	videostd_set,
+				 unsigned int		line,
+				 unsigned int		first_pixel_position,
+				 unsigned int		n_pixels_total,
+				 vbi_bool		stuffing)
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
+  __attribute__ ((_vbi_nonnull (1, 2, 3, 4)))
+#endif
+  ;
+
+typedef struct _vbi_dvb_mux vbi_dvb_mux;
+
+typedef vbi_bool
+vbi_dvb_mux_cb			(vbi_dvb_mux *		mx,
+				 void *			user_data,
+				 const uint8_t *	packet,
+				 unsigned int		packet_size);
+
+extern void
+vbi_dvb_mux_reset		(vbi_dvb_mux *		mx)
+  __attribute__ ((_vbi_nonnull (1)));
+extern vbi_bool
+vbi_dvb_mux_cor		(vbi_dvb_mux *		mx,
+				 uint8_t **		buffer,
+				 unsigned int *		buffer_left,
+				 const vbi_sliced **	sliced,
+				 unsigned int *		sliced_lines,
+				 vbi_service_set	service_mask,
+				 const uint8_t *	raw,
+				 const vbi_sampling_par *sampling_par,	 
+				 int64_t		pts)
+#ifndef DOXYGEN_SHOULD_SKIP_THIS
+  __attribute__ ((_vbi_nonnull (1, 2, 3, 4, 5)))
+#endif
+  ;
+extern vbi_bool
+vbi_dvb_mux_feed		(vbi_dvb_mux *		mx,
+				 const vbi_sliced *	sliced,
+				 unsigned int		sliced_lines,
+				 vbi_service_set	service_mask,
+				 const uint8_t *	raw,
+				 const vbi_sampling_par *sampling_par,
+				 int64_t		pts)
+  __attribute__ ((_vbi_nonnull (1)));
+extern unsigned int
+vbi_dvb_mux_get_data_identifier (const vbi_dvb_mux *	mx)
+  __attribute__ ((_vbi_nonnull (1)));
+extern vbi_bool
+vbi_dvb_mux_set_data_identifier (vbi_dvb_mux *	mx,
+				  unsigned int		data_identifier)
+  __attribute__ ((_vbi_nonnull (1)));
+extern unsigned int
+vbi_dvb_mux_get_min_pes_packet_size
+				(vbi_dvb_mux *		mx)
+  __attribute__ ((_vbi_nonnull (1)));
+extern unsigned int
+vbi_dvb_mux_get_max_pes_packet_size
+				(vbi_dvb_mux *		mx)
+  __attribute__ ((_vbi_nonnull (1)));
+extern vbi_bool
+vbi_dvb_mux_set_pes_packet_size (vbi_dvb_mux *	mx,
+				  unsigned int		min_size,
+				  unsigned int		max_size)
+  __attribute__ ((_vbi_nonnull (1)));
+extern void
+vbi_dvb_mux_delete		(vbi_dvb_mux *		mx);
+extern vbi_dvb_mux *
+vbi_dvb_pes_mux_new		(vbi_dvb_mux_cb *	callback,
+				 void *			user_data)
+  __attribute__ ((_vbi_alloc));
+extern vbi_dvb_mux *
+vbi_dvb_ts_mux_new		(unsigned int		pid,
+				 vbi_dvb_mux_cb *	callback,
+				 void *			user_data)
+  __attribute__ ((_vbi_alloc));
+
+
+
 /* idl_demux.h */
 
 
